--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
   "rules": {
     "prettier/prettier": "error",
     "no-unused-vars": "warn",
-    "no-console": "off"
+    "no-console": "off",
+    "no-continue": "warn",
+    "no-param-reassign": "warn"
   }
 }
